--- a/weboldal/kapcsolat.html
+++ b/weboldal/kapcsolat.html
@@ -54,11 +54,11 @@
     </div>
     <div class="middle-section">
       <p>e-mail: info.korrektura@gmail.com       <br>
-        adószám: </p>
+        adószám: 66424798-1-33 </p>
     </div>
     <div class="middle-section">
-      <p>bankszámlaszám: <br>
-        IBAN: HU30-</p>
+      <p>bankszámlaszám: 10702019-62251569-51100005 <br>
+        IBAN: HU55107020196225156951100005</p>
     </div>
   </div>
   
